k8s/development/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: hotel-management-dev
spec:
  selector:
    app: user-service
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8001
  # type: ClusterIP
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: hotel-management-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service
          ports:
            - containerPort: 8001
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8001
              initialDelaySeconds: 5
              periodSeconds: 5
